# EmbeddedLibrary

./: .clang-tidy  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  buildRemoteProjects.sh
